syntax = "proto3";
package lcp.service.enclave.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/datachainlab/lcp/go/relay/enclave";
option (gogoproto.goproto_getters_all) = false;

service Query {
    rpc AttestedVerificationReport(QueryAttestedVerificationReportRequest) returns (QueryAttestedVerificationReportResponse);
}

message QueryAttestedVerificationReportRequest {}

message QueryAttestedVerificationReportResponse {
    bytes enclave_address = 1;
    bytes report = 2;
    bytes signature = 3;
    bytes signing_cert = 4;
}
